--- a/smollm-webgpu/index.html
+++ b/smollm-webgpu/index.html
@@ -8,11 +8,7 @@
   </head>
 
   <body class="m-0 p-0">
-    <div class="flex h-screen">
-      <div id="chat-root" class="w-1/4 h-full overflow-auto"></div>
-
-      <div id="univer" class="w-3/4 h-full overflow-auto bg-white dark:bg-gray-900"></div>
-    </div>
+    <div id="root" class="h-screen w-screen"></div>
 
     <script
       id="MathJax-script"
