--- a/smollm-webgpu/index.html
+++ b/smollm-webgpu/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmolLM2 WebGPU + Spreadsheet</title>
+    <title>SmolLM2 WebGPU</title>
   </head>
 
-  <body class="m-0 p-0">
-    <div id="root" class="h-screen w-screen"></div>
+  <body>
+    <div id="root"></div>
 
+    <script>
+      window.MathJax = {
+        tex: {
+          inlineMath: [
+            ["$", "$"],
+            ["\\(", "\\)"],
+          ],
+        },
+        svg: {
+          fontCache: "global",
+        },
+      };
+    </script>
     <script
       id="MathJax-script"
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
